@@ -22,6 +22,7 @@
     * Add Net::SSLeay#clear_mode method.
     * Add Net::SSLeay#version method.
     * Add Net::SSLeay::DH#DESTROY method.
+    * Add Net::SSLeay::SSL_SESSION class.
     
 0.009 2024-11-08
   [Requirement Changes]
